correct accordion hidding adding z-index to box title

--- a/scss/category_page/_category_aside_filters.scss
+++ b/scss/category_page/_category_aside_filters.scss
@@ -2,6 +2,8 @@
 
 .category_filters {
     .accordion_box_title {
+        position: relative;
+        z-index: 1;
         display: flex;
         justify-content: space-between;
         align-items: center;
