--- a/scss/main.css
+++ b/scss/main.css
@@ -3155,6 +3155,8 @@ header #nav .bottom-nav .right-container ul.no-menu-links .new-nav li::before {
   }
 }
 .category_filters .accordion_box_title {
+  position: relative;
+  z-index: 1;
   display: flex;
   justify-content: space-between;
   align-items: center;
